5_hackazon/nap/ingress_hackazon_nap.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hackazon-ingress
  namespace: hackazon
  annotations:
    appprotect.f5.com/app-protect-policy: "default/dataguard-blocking"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "default/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=10.1.20.6:5144"
    kubernetes.io/ingress.class: "nginx"

spec:
  tls:
  - hosts:
    - hackazon.example.com
    secretName: default-server-secret-hackazon
  rules:
  - host: hackazon.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hackazon
          servicePort: 80
